--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "web3": "^1.0.0-beta.34"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express-rate-limit": "^2.11.0"
   }
 }
